# fastapi-streamlit-postgresql-ml-template

./: .gitignore  .pylintrc  Makefile  README.md  alembic.ini  docker-compose.yml  environment.yml  pyproject.toml  setup.cfg
.github/workflows/: cml.yaml  linter.yaml
alembic/: env.py
alembic/versions/: e54be0271a61_init.py
app/: BankNotes.py  app.py  main.py  simpletestapp.py
fastapi/: app.py
src/: database.py  db_models.py
src/fastapi/: BankNotes.py  simpletestapp.py
tasks/: lint.sh  test.sh
