[tool.poetry]
name = "banknoteclassifier"
version = "0.1.0"
description = "This is a template fastapi app for machine learning model deployment."
authors = ["JayThibs <thibo.jacques@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.4"
numpy = "^1.21.0"
scipy = "^1.7.0"
scikit-learn = "^0.24.2"
pandas = "^1.3.0"
fastapi = "^0.66.0"
uvicorn = "^0.14.0"
gunicorn = "19.9.0"
uvloop = "^0.15.3"
httptools = "^0.2.0"
matplotlib = "^3.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
