[tool.poetry]
name = "banknoteclassifier"
version = "0.1.0"
description = "This is a template fastapi app for machine learning model deployment."
authors = ["JayThibs <thibo.jacques@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.5"
numpy = "^1.21.0"
scipy = "^1.7.0"
scikit-learn = "^0.24.2"
pandas = "^1.3.0"
fastapi = "^0.66.0"
uvicorn = "^0.14.0"
gunicorn = "19.9.0"
uvloop = "^0.15.3"
httptools = "^0.2.0"
matplotlib = "^3.4.2"
streamlit = "^0.84.1"
black = "^21.6b0"
bandit = "^1.7.0"
mypy = "^0.910"
pycodestyle = "^2.7.0"
pydocstyle = "^6.1.1"
pylint = "^2.9.3"
pytest = "^6.2.4"
safety = "^1.10.3"
Pillow = "^8.3.1"
SQLAlchemy = "^1.4.22"
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
pylint = "^2.9.5"
pycodestyle = "^2.7.0"
pydocstyle = "^6.1.1"
mypy = "^0.910"
bandit = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
